--- a/views/login.html
+++ b/views/login.html
@@ -18,24 +18,23 @@ btn.addEventListener('click',()=>{
     //첫째 인잣값url, 두번째 인자값은 options=>object
     fetch('http://localhost:3000/login2',{
         method:'post',
-        // headers:{
-        //     'Content-type:':'application/json'
-        // },
+        headers:{
+            'Content-type:':'application/json'
+        },
         body:
             JSON.stringify({a:1,b:2})
             //JSON.stringify:우리가 만든 객체를 string으로 바꿔서 보내줌.
-    })
+    })//Promise Object
 .then(data=>{
     console.log(data);//처리결과 객체를 반환
     return data.json();
-
     //data:응답 브라우저창의 console
 })
 .then(json=>{
     console.log(json);
-    json.test//ok
+    //json.test//ok
     const root = document.querySelector('.root');
-    root.innerHTML = json.test;
+    root.innerHTML = json.text;
 })
 })
 
